[package]
name = "chay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chayd"
path = "chay/chayd_main.rs"

[[bin]]
name = "chay"
path = "chay/chay_main.rs"

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
prost = "0.11"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
